--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "yad-vashem-client",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~14.2.12",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~14.2.12",
-    "@angular/compiler": "~14.2.12",
-    "@angular/core": "~14.2.12",
-    "@angular/forms": "~14.2.12",
-    "@angular/google-maps": "^15.0.0",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~14.2.12",
-    "@angular/platform-browser-dynamic": "~14.2.12",
-    "@angular/router": "~14.2.12",
-    "@types/googlemaps": "^3.43.3",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular/cli": "^15.0.1",
-    "@angular/compiler-cli": "~14.2.12",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.8.4"
-  }
+    "name": "yad-vashem-client",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@agm/core": "^3.0.0-beta.0",
+        "@angular/animations": "~15.0.1",
+        "@angular/cdk": "^13.3.9",
+        "@angular/common": "~15.0.1",
+        "@angular/compiler": "~15.0.1",
+        "@angular/core": "~15.0.1",
+        "@angular/forms": "~15.0.1",
+        "@angular/google-maps": "^15.0.0",
+        "@angular/material": "^13.3.9",
+        "@angular/platform-browser": "~15.0.1",
+        "@angular/platform-browser-dynamic": "~15.0.1",
+        "@angular/router": "~15.0.1",
+        "@types/googlemaps": "^3.43.3",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^15.0.1",
+        "@angular/cli": "^15.0.1",
+        "@angular/compiler-cli": "~15.0.1",
+        "@types/jasmine": "~3.10.0",
+        "@types/node": "^12.11.1",
+        "jasmine-core": "~4.0.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.1.0",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "typescript": "~4.8.4"
+    }
 }
