--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "~15.0.1",
         "@angular/platform-browser-dynamic": "~15.0.1",
         "@angular/router": "~15.0.1",
+        "@googlemaps/js-api-loader": "^1.15.1",
         "@types/googlemaps": "^3.43.3",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
